Fixed
ApkGenerator working in Windows.